// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bars should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div
          style="position: absolute; left: 0%; bottom: 24.5%; width: 20%; height: 1%;"
        />
        <div
          style="position: absolute; left: 0%; bottom: 9.5%; width: 40%; height: 1%;"
        />
        <div
          style="position: absolute; left: 0%; bottom: 49.5%; width: 60%; height: 1%;"
        />
        <div
          style="position: absolute; left: 0%; bottom: 74.5%; width: 80%; height: 1%;"
        />
        <div
          style="position: absolute; left: 0%; bottom: 99.5%; width: 100%; height: 1%;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Bars should render with custom data + accessors 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div
          style="position: absolute; left: 0%; bottom: 20%; width: 20%; height: 10%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 0%; bottom: 5%; width: 40%; height: 10%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 0%; bottom: 45%; width: 60%; height: 10%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 0%; bottom: 70%; width: 65%; height: 10%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 0%; bottom: 51%; width: 95%; height: 10%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 0%; bottom: 95%; width: 100%; height: 10%;"
        >
          <p>
            Child
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Box should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div
          style="position: absolute; left: 0%; bottom: 0%; width: 1%; height: 1%;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Box should render with custom coordinates 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div
          style="background-color: aquamarine; position: absolute; left: 25%; bottom: 25%; width: 50%; height: 50%;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Columns should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div
          style="position: absolute; left: 19.5%; bottom: 0%; width: 1%; height: 25%;"
        />
        <div
          style="position: absolute; left: 39.5%; bottom: 0%; width: 1%; height: 10%;"
        />
        <div
          style="position: absolute; left: 59.5%; bottom: 0%; width: 1%; height: 50%;"
        />
        <div
          style="position: absolute; left: 79.5%; bottom: 0%; width: 1%; height: 75%;"
        />
        <div
          style="position: absolute; left: 99.5%; bottom: 0%; width: 1%; height: 100%;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Columns should render with custom data + accessors 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div
          style="position: absolute; left: 15%; bottom: 0%; width: 10%; height: 25%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 35%; bottom: 0%; width: 10%; height: 10%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 55%; bottom: 0%; width: 10%; height: 50%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 60%; bottom: 0%; width: 10%; height: 75%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 90%; bottom: 0%; width: 10%; height: 56%;"
        >
          <p>
            Child
          </p>
        </div>
        <div
          style="position: absolute; left: 95%; bottom: 0%; width: 10%; height: 100%;"
        >
          <p>
            Child
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Grid should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div>
          <div
            style="position: absolute; left: 0px; top: 100%; width: 100%; height: 0px;"
          >
            <div
              data-first="true"
              data-last="false"
            >
              0
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 80%; width: 100%; height: 0px;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              20
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 60%; width: 100%; height: 0px;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              40
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 40%; width: 100%; height: 0px;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              60
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 20%; width: 100%; height: 0px;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              80
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 0%; width: 100%; height: 0px;"
          >
            <div
              data-first="false"
              data-last="true"
            >
              100
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Grid should render proper HTML 2`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div>
          <div
            style="position: absolute; left: 0%; top: 0px; width: 0px; height: 100%;"
          >
            <div
              data-first="true"
              data-last="false"
            >
              0
            </div>
          </div>
          <div
            style="position: absolute; left: 20%; top: 0px; width: 0px; height: 100%;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              20
            </div>
          </div>
          <div
            style="position: absolute; left: 40%; top: 0px; width: 0px; height: 100%;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              40
            </div>
          </div>
          <div
            style="position: absolute; left: 60%; top: 0px; width: 0px; height: 100%;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              60
            </div>
          </div>
          <div
            style="position: absolute; left: 80%; top: 0px; width: 0px; height: 100%;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              80
            </div>
          </div>
          <div
            style="position: absolute; left: 100%; top: 0px; width: 0px; height: 100%;"
          >
            <div
              data-first="false"
              data-last="true"
            >
              100
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Grid should render with custom ticks 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div>
          <div
            style="position: absolute; left: 0px; top: 100%; width: 100%; height: 0px;"
          >
            <div
              data-first="true"
              data-last="false"
            >
              0
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 80%; width: 100%; height: 0px;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              20
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 50%; width: 100%; height: 0px;"
          >
            <div
              data-first="false"
              data-last="false"
            >
              50
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 25%; width: 100%; height: 0px;"
          >
            <div
              data-first="false"
              data-last="true"
            >
              75
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Point should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div
          style="position: absolute; width: 0px; height: 0px; left: 50%; top: 50%;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Point should render with child 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <div
          style="position: absolute; width: 0px; height: 0px; left: 50%; top: 50%;"
        >
          <p>
            Child
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Svg should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Svg should render proper HTML 2`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: hidden;"
          viewBox="0 0 100 100"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgArea should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <path
            d="M20,100L20,75L40,90L60,50L80,25L100,0L100,100"
            style="vector-effect: non-scaling-stroke;"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgArea should render with custom floor 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <path
            d="M20,90L20,75L40,90L60,50L80,25L100,0L100,90"
            style="vector-effect: non-scaling-stroke;"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgCircle should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            r="5"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgCircle should render with custom x/y 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <circle
            cx="20"
            cy="100"
            r="5"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgLine should render custom data + accessors 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <path
            d="M0,100L20,75L40,90L60,50L65,25L95,44L100,0"
            style="vector-effect: non-scaling-stroke;"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgLine should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <path
            d="M0,100L20,75L40,90L60,50L80,25L100,0"
            style="vector-effect: non-scaling-stroke;"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgPolygon should render custom data + accessors 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <path
            d="M0,100L20,75L40,90L60,50L65,25L95,44L100,0"
            style="vector-effect: non-scaling-stroke;"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgPolygon should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <path
            d="M0,100L20,75L40,90L60,50L80,25L100,0"
            style="vector-effect: non-scaling-stroke;"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgRect should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <rect
            height="1"
            width="1"
            x="0"
            y="99"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgRect should render with custom coordinates 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <rect
            height="10"
            width="10"
            x="10"
            y="80"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgScatterPlot should render custom data + accessors 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <path
            d="M0 100 A0 0 0 0 1 0.0001 100.0001 M20 75 A0 0 0 0 1 20.0001 75.0001 M40 90 A0 0 0 0 1 40.0001 90.0001 M60 50 A0 0 0 0 1 60.0001 50.0001 M65 25 A0 0 0 0 1 65.0001 25.0001 M95 44 A0 0 0 0 1 95.0001 44.0001 M100 0 A0 0 0 0 1 100.0001 0.0001"
            style="vector-effect: non-scaling-stroke;"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`SvgScatterPlot should render proper HTML 1`] = `
<body>
  <div>
    <div
      style="width: 400px; height: 300px;"
    >
      <div
        style="position: relative; display: block; width: 100%; height: 100%;"
      >
        <svg
          preserveAspectRatio="none"
          style="position: absolute; width: 100%; height: 100%; overflow: visible;"
          viewBox="0 0 100 100"
        >
          <path
            d="M0 100 A0 0 0 0 1 0.0001 100.0001 M20 75 A0 0 0 0 1 20.0001 75.0001 M40 90 A0 0 0 0 1 40.0001 90.0001 M60 50 A0 0 0 0 1 60.0001 50.0001 M80 25 A0 0 0 0 1 80.0001 25.0001 M100 0 A0 0 0 0 1 100.0001 0.0001"
            style="vector-effect: non-scaling-stroke;"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;
